--- a/docs/3/modules/sslinfo.yml
+++ b/docs/3/modules/sslinfo.yml
@@ -97,7 +97,7 @@ commands:
     text: |-
       /SSLINFO Sadie
   - added: 3.9.0
-  - description: |-
+    description: |-
       Views the TLS (SSL) certificate information for users in #wibble
     text: |-
       /SSLINFO #wibble
