Remove name from the syntax, and capitalize the name field

--- a/docs/3/commands/_admin.yml
+++ b/docs/3/commands/_admin.yml
@@ -1,6 +1,6 @@
-name: admin
+name: ADMIN
 syntax: >-
-  /ADMIN [<server>]
+  [<server>]
 description: |-
   Requests the contact details for the administrator of the specified server.
 
