--- a/docs/3/commands/_kick.yml
+++ b/docs/3/commands/_kick.yml
@@ -1,6 +1,6 @@
-name: kick
+name: KICK
 syntax: >-
-  /KICK <channel> <nick>[,<nick>]+ [<reason>]
+  <channel> <nick>[,<nick>]+ [<reason>]
 description: |-
   Kicks one or more users from the specified channel.
 
