--- a/docs/3/commands/_kill.yml
+++ b/docs/3/commands/_kill.yml
@@ -1,6 +1,6 @@
-name: kill
+name: KILL
 syntax: >-
-  /KILL <nick>[,<nick>]+ <reason>
+  <nick>[,<nick>]+ <reason>
 description: |-
   Forcibly disconnects one or more specified users from the network with the specified reason.
 
