--- a/docs/3/commands/_modules.yml
+++ b/docs/3/commands/_modules.yml
@@ -1,5 +1,4 @@
-name: modules
-syntax: >-
-  /MODULES
+name: MODULES
+syntax: ""
 description: |-
   Lists all modules which are loaded on the local server.
