--- a/docs/3/commands/_motd.yml
+++ b/docs/3/commands/_motd.yml
@@ -1,6 +1,6 @@
-name: motd
+name: MOTD
 syntax: >-
-  /MOTD [<server>]
+  [<server>]
 description: |-
   If `<server>` is specified then requests the message of the day for the specified server.
 
