--- a/docs/3/commands/_privmsg.yml
+++ b/docs/3/commands/_privmsg.yml
@@ -1,6 +1,6 @@
-name: privmsg
+name: PRIVMSG
 syntax: >-
-  /PRIVMSG <target>[,<target>]+ <message>
+  <target>[,<target>]+ <message>
 description: |-
   Sends a message to the targets specified in `<target>`. These targets can be a channel, a user, or a server mask (requires the users/mass-message server operator privilege).
 example: |-
