--- a/docs/3/commands/_rehash.yml
+++ b/docs/3/commands/_rehash.yml
@@ -1,6 +1,6 @@
-name: rehash
+name: REHASH
 syntax: >-
-  /REHASH <server>|-<type>
+  <server>|-<type>
 description: |-
   Reloads the server configuration.
 
