--- a/docs/3/commands/_squery.yml
+++ b/docs/3/commands/_squery.yml
@@ -1,6 +1,6 @@
-name: squery
+name: SQUERY
 syntax: >-
-  /SQUERY <target> <message>
+  <target> <message>
 description: |-
   Sends a message to the service specified in `<target>`. This target must be on a U-lined server.
 example: |-
