--- a/docs/3/commands/_userhost.yml
+++ b/docs/3/commands/_userhost.yml
@@ -1,6 +1,6 @@
-name: userhost
+name: USERHOST
 syntax: >-
-  /USERHOST <nick> [<nick>]+
+  <nick> [<nick>]+
 description: |-
   Requests the hostname of the specified users.
 example: |-
