--- a/docs/3/commands/_version.yml
+++ b/docs/3/commands/_version.yml
@@ -1,6 +1,6 @@
-name: version
+name: VERSION
 syntax: >-
-  /VERSION [<server>]
+  [<server>]
 description: |-
   If `<server>` is specified then requests the version of the specified server.
 
