--- a/docs/3/commands/_wallops.yml
+++ b/docs/3/commands/_wallops.yml
@@ -1,6 +1,6 @@
-name: wallops
+name: WALLOPS
 syntax: >-
-  /WALLOPS <message>
+  <message>
 description: |-
   Sends a message to all users with user mode `w` (wallops) enabled:
 
