--- a/docs/3/commands/_whowas.yml
+++ b/docs/3/commands/_whowas.yml
@@ -1,6 +1,6 @@
-name: whowas
+name: WHOWAS
 syntax: >-
-  /WHOWAS <nick>
+  <nick>
 description: |-
   Requests information about a user who was previously connected with the specified nick.
 example: |-
