--- a/docs/3/commands/_info.yml
+++ b/docs/3/commands/_info.yml
@@ -1,5 +1,4 @@
-name: info
-syntax: >-
-  /INFO
+name: INFO
+syntax: ""
 description: |-
   Requests information on the developers and supporters who made the creation and continued development of this IRC server possible.
