--- a/docs/3/commands/_invite.yml
+++ b/docs/3/commands/_invite.yml
@@ -1,6 +1,6 @@
-name: invite
+name: INVITE
 syntax: >-
-  /INVITE [<nick> <channel> [<duration>]]
+  [<nick> <channel> [<duration>]]
 description: |-
   If `<nick>` and `<channel>` are specified then sends an invite to `<nick>` inviting them to join `<channel>`.
 
