--- a/docs/3/commands/_kline.yml
+++ b/docs/3/commands/_kline.yml
@@ -1,6 +1,6 @@
-name: kline
+name: KLINE
 syntax: >-
-  /KLINE <ident@host> [<duration> <reason>]
+  <ident@host> [<duration> <reason>]
 description: |-
   If `<duration>` and `<reason>` are specified then bans an ident@host mask from connecting to the local server. The `<duration>` may be specified as a number of seconds or as a duration in the format 1y2w3d4h5m6s. If the duration is zero then the K-line will be permanent.
 
