--- a/docs/3/commands/_oper.yml
+++ b/docs/3/commands/_oper.yml
@@ -1,6 +1,6 @@
-name: oper
+name: OPER
 syntax: >-
-  /OPER <name> <password>
+  <name> <password>
 description: |-
   Logs into a server operator account with the specified name and password.
 example: |-
