--- a/docs/3/commands/_pass.yml
+++ b/docs/3/commands/_pass.yml
@@ -1,6 +1,6 @@
-name: pass
+name: PASS
 syntax: >-
-  /PASS <password>
+  <password>
 description: |-
   Specifies the password used to log in to the local server.
 example: |-
