--- a/docs/3/commands/_quit.yml
+++ b/docs/3/commands/_quit.yml
@@ -1,6 +1,6 @@
-name: quit
+name: QUIT
 syntax: >-
-  /QUIT [<message>]
+  [<message>]
 description: |-
   Disconnects from the local server. If `<message>` is specified then it will be used as the message shown when quitting. Otherwise, "Client exited" will be used.
 example: |-
