--- a/docs/3/commands/_servlist.yml
+++ b/docs/3/commands/_servlist.yml
@@ -1,6 +1,6 @@
-name: servlist
+name: SERVLIST
 syntax: >-
-  /SERVLIST [<nick> [<oper-type>]]
+  [<nick> [<oper-type>]]
 description: |-
   List network services that are currently connected to the network and visible to you. The optional glob-based nick and oper-type parameters match against the nickname of the network service and the oper type of the network service.
 example: |-
