--- a/docs/3/commands/_zline.yml
+++ b/docs/3/commands/_zline.yml
@@ -1,6 +1,6 @@
-name: zline
+name: ZLINE
 syntax: >-
-  /ZLINE <ipaddr> [<duration> <reason>]
+  <ipaddr> [<duration> <reason>]
 description: |-
   If `<duration>` and `<reason>` are specified then bans an IP address or CIDR range from connecting to the network. The `<duration>` may be specified as a number of seconds or as a duration in the format 1y2w3d4h5m6s. If the duration is zero then the Z-line will be permanent.
 
