--- a/docs/3/commands/_join.yml
+++ b/docs/3/commands/_join.yml
@@ -3,21 +3,16 @@ syntax: >-
   <channel>[,<channel>]+ [<key>][,[<key>]+]
 description: |-
   Joins one or more channels using the specified channel keys if required.
-example: |-
-  Joins #channel:
-
-  ```plaintext
-  /JOIN #channel
-  ```
-
-  Joins #channel with the key hunter2:
-
-  ```plaintext
-  /JOIN #channel hunter2
-  ```
-
-  Joins #channel-one with no key and #channel-two with the key hunter2:
-
-  ```plaintext
-  /JOIN #channel-one,#channel-two ,hunter2
-  ```
+example:
+  - description: |-
+      Joins #channel
+    text: |-
+      /JOIN #channel
+  - description: |-
+      Joins #channel with the key hunter2
+    text: |-
+      /JOIN #channel hunter2
+  - description: |-
+      Joins #channel-one with no key and #channel-two with the key hunter2
+    text: |-
+      /JOIN #channel-one,#channel-two ,hunter2
