--- a/docs/3/commands/_kill.yml
+++ b/docs/3/commands/_kill.yml
@@ -5,15 +5,12 @@ description: |-
   Forcibly disconnects one or more specified users from the network with the specified reason.
 
   This command is only usable by server operators with KILL in one of their `<class>` blocks.
-example: |-
-  Forcibly disconnects opal from the network:
-
-  ```plaintext
-  /KILL opal :Disruptive behaviour is not allowed
-  ```
-
-  Forcibly disconnects Soni and opal from the network:
-
-  ```plaintext
-  /KILL Soni,opal :Disruptive behaviour is not allowed
-  ```
+example:
+  - description: |-
+      Forcibly disconnects opal from the network
+    text: |-
+      /KILL opal :Disruptive behaviour is not allowed
+  - description: |-
+      Forcibly disconnects Soni and opal from the network
+    text: |-
+      /KILL Soni,opal :Disruptive behaviour is not allowed
