--- a/docs/3/commands/_nick.yml
+++ b/docs/3/commands/_nick.yml
@@ -5,15 +5,12 @@ description: |-
   Changes your nickname to `<nick>`.
 
   You may also change your nick to your UUID by specifying a nickname of "0".
-example: |-
-  Changes your nick to Sadie:
-
-  ```plaintext
-  /NICK Sadie
-  ```
-
-  Changes your nick to your UUID:
-
-  ```plaintext
-  /NICK 0
-  ```
+example:
+  - description: |-
+      Changes your nick to Sadie
+    text: |-
+      /NICK Sadie
+  - description: |-
+      Changes your nick to your UUID
+    text: |-
+      /NICK 0
