--- a/docs/3/commands/_privmsg.yml
+++ b/docs/3/commands/_privmsg.yml
@@ -3,21 +3,16 @@ syntax: >-
   <target>[,<target>]+ <message>
 description: |-
   Sends a message to the targets specified in `<target>`. These targets can be a channel, a user, or a server mask (requires the users/mass-message server operator privilege).
-example: |-
-  Sends a message to #channel saying "Hello!":
-
-  ```plaintext
-  /PRIVMSG #channel :Hello!
-  ```
-
-  Sends a message to Sadie saying "Hello!":
-
-  ```plaintext
-  /PRIVMSG Sadie :Hello!
-  ```
-
-  Sends a message to all users on servers matching the glob pattern `*.example.com` saying "Hello!":
-
-  ```plaintext
-  /PRIVMSG $*.example.com :Hello!
-  ```
+example:
+  - description: |-
+      Sends a message to #channel saying "Hello!"
+    text: |-
+      /PRIVMSG #channel :Hello!
+  - description: |-
+      Sends a message to Sadie saying "Hello!"
+    text: |-
+      /PRIVMSG Sadie :Hello!
+  - description: |-
+      Sends a message to all users on servers matching the glob pattern `*.example.com` saying "Hello!"
+    text: |-
+      /PRIVMSG $*.example.com :Hello!
