--- a/docs/3/commands/_rehash.yml
+++ b/docs/3/commands/_rehash.yml
@@ -11,21 +11,16 @@ description: |-
   Otherwise, if no parameters are specified, the local server's configuration is reloaded.
 
   This command is only usable by server operators with REHASH in one of their `<class>` blocks.
-example: |-
-  Reloads the local server configuration:
-
-  ```plaintext
-  /REHASH
-  ```
-
-  Reloads the server configuration for remote.example.com:
-
-  ```plaintext
-  /REHASH remote.example.com
-  ```
-
-  Reloads the TLS (SSL) certificates (requires [the sslinfo module](/3/modules/sslinfo)):
-
-  ```plaintext
-  /REHASH -ssl
-  ```
+example:
+  - description: |-
+      Reloads the local server configuration
+    text: |-
+      /REHASH
+  - description: |-
+      Reloads the server configuration for remote.example.com
+    text: |-
+      /REHASH remote.example.com
+  - description: |-
+      Reloads the TLS (SSL) certificates (requires [the sslinfo module](/3/modules/sslinfo))
+    text: |-
+      /REHASH -ssl
