--- a/docs/3/commands/_squery.yml
+++ b/docs/3/commands/_squery.yml
@@ -3,9 +3,8 @@ syntax: >-
   <target> <message>
 description: |-
   Sends a message to the service specified in `<target>`. This target must be on a U-lined server.
-example: |-
-  Sends a message to NickServ saying "HELP":
-
-  ```plaintext
-  /SQUERY NickServ HELP
-  ```
+example:
+  - description: |-
+      Sends a message to NickServ saying "HELP"
+    text: |-
+      /SQUERY NickServ HELP
