--- a/docs/3/commands/_stats.yml
+++ b/docs/3/commands/_stats.yml
@@ -34,15 +34,12 @@ description: |-
   T         | Show bandwidth/socket statistics.
   U         | Show U-lined servers.
 
-example: |-
-  Requests `p` (ports) statistics for the local server:
-
-  ```plaintext
-  /STATS p
-  ```
-
-  Requests `p` (ports) statistics for the remote server irc.eu.example.com:
-
-  ```plaintext
-  /STATS p irc.eu.example.com
-  ```
+example:
+  - description: |-
+      Requests `p` (ports) statistics for the local server
+    text: |-
+      /STATS p
+  - description: |-
+      Requests `p` (ports) statistics for the remote server irc.eu.example.com
+    text: |-
+      /STATS p irc.eu.example.com
