--- a/docs/3/commands/_unloadmodule.yml
+++ b/docs/3/commands/_unloadmodule.yml
@@ -5,9 +5,8 @@ description: |-
   Unloads the specified module on the local server.
 
   This command is only usable by server operators with UNLOADMODULE in one of their `<class>` blocks.
-example: |-
-  Unloads the alias module:
-
-  ```plaintext
-  /UNLOADMODULE alias
-  ```
+example:
+  - description: |-
+      Unloads the alias module
+    text: |-
+      /UNLOADMODULE alias
