--- a/docs/3/commands/_wallops.yml
+++ b/docs/3/commands/_wallops.yml
@@ -5,9 +5,8 @@ description: |-
   Sends a message to all users with user mode `w` (wallops) enabled:
 
   This command is only usable by server operators with WALLOPS in one of their `<class>` blocks.
-example: |-
-  Sends "Rebooting for updates at 20:00 UTC" to all users with user mode `w` (wallops) enabled.
-
-  ```plaintext
-  /WALLOPS :Rebooting for updates at 20:00 UTC
-  ```
+example:
+  - description: |-
+      Sends "Rebooting for updates at 20:00 UTC" to all users with user mode `w` (wallops) enabled
+    text: |-
+      /WALLOPS :Rebooting for updates at 20:00 UTC
