--- a/docs/3/commands/_zline.yml
+++ b/docs/3/commands/_zline.yml
@@ -7,21 +7,16 @@ description: |-
   Otherwise, if just `<ipaddr>` is specified, removes a network-wide ban on an IP address.
 
   This command is only usable by server operators with ZLINE in one of their `<class>` blocks.
-example: |-
-  Z-lines 192.0.2.1 for one day with the reason "Testing":
-
-  ```plaintext
-  /ZLINE 192.0.2.1 1d :Testing
-  ```
-
-  Z-lines 192.0.2.0/24 for one day with the reason "Testing":
-
-  ```plaintext
-  /ZLINE 192.0.2.0/24 86400 :Testing
-  ```
-
-  Removes a Z-line on 192.0.2.1:
-
-  ```plaintext
-  /ZLINE 192.0.2.1
-  ```
+example:
+  - description: |-
+      Z-lines 192.0.2.1 for one day with the reason "Testing"
+    text: |-
+      /ZLINE 192.0.2.1 1d :Testing
+  - description: |-
+      Z-lines 192.0.2.0/24 for one day with the reason "Testing"
+    text: |-
+      /ZLINE 192.0.2.0/24 86400 :Testing
+  - description: |-
+      Removes a Z-line on 192.0.2.1
+    text: |-
+      /ZLINE 192.0.2.1
