--- a/docs/3/commands/_admin.yml
+++ b/docs/3/commands/_admin.yml
@@ -5,15 +5,12 @@ description: |-
   Requests the contact details for the administrator of the specified server.
 
   If `<server>` is not specified then it defaults to the local server.
-example: |-
-  Requests the contact details for the local server administrator:
-
-  ```plaintext
-  /ADMIN
-  ```
-
-  Requests the contact details for the server administrator of irc.example.com:
-
-  ```plaintext
-  /ADMIN irc.example.com
-  ```
+example:
+  - description: |-
+      Requests the contact details for the local server administrator
+    text: |-
+      /ADMIN
+  - description: |-
+      Requests the contact details for the server administrator of irc.example.com
+    text: |-
+      /ADMIN irc.example.com
