--- a/docs/3/commands/_away.yml
+++ b/docs/3/commands/_away.yml
@@ -5,15 +5,12 @@ description: |-
   If `<message>` is specified marks yourself as being away with the specified message.
 
   Otherwise, marks yourself as being no longer away.
-example: |-
-  Marks yourself away with the message "Washing my hair":
-
-  ```plaintext
-  /AWAY :Washing my hair
-  ```
-
-  Marks yourself as no longer being away:
-
-  ```plaintext
-  /AWAY
-  ```
+example:
+  - description: |-
+      Marks yourself away with the message "Washing my hair"
+    text: |-
+      /AWAY :Washing my hair
+  - description: |-
+      Marks yourself as no longer being away
+    text: |-
+      /AWAY
