--- a/docs/3/commands/_gline.yml
+++ b/docs/3/commands/_gline.yml
@@ -7,21 +7,16 @@ description: |-
   Otherwise, if just `<ident@host>` is specified, removes a network-wide ban on an ident@host mask.
 
   This command is only usable by server operators with GLINE in one of their `<class>` blocks.
-example: |-
-  G-lines sadie@example.com for one day with the reason "Testing":
-
-  ```plaintext
-  /GLINE sadie@example.com 1d :Testing
-  ```
-
-  G-lines sadie@example.com for one day with the reason "Testing":
-
-  ```plaintext
-  /GLINE sadie@example.com 86400 :Testing
-  ```
-
-  Removes a G-line on sadie@example.com:
-
-  ```plaintext
-  /GLINE sadie@example.com
-  ```
+example:
+  - description: |-
+      G-lines sadie@example.com for one day with the reason "Testing"
+    text: |-
+      /GLINE sadie@example.com 1d :Testing
+  - description: |-
+      G-lines sadie@example.com for one day with the reason "Testing"
+    text: |-
+      /GLINE sadie@example.com 86400 :Testing
+  - description: |-
+      Removes a G-line on sadie@example.com
+    text: |-
+      /GLINE sadie@example.com
