--- a/docs/3/commands/_loadmodule.yml
+++ b/docs/3/commands/_loadmodule.yml
@@ -5,9 +5,8 @@ description: |-
   Loads the specified module on the local server.
 
   This command is only usable by server operators with LOADMODULE in one of their `<class>` blocks.
-example: |-
-  Loads the botmode module:
-
-  ```plaintext
-  /LOADMODULE botmode
-  ```
+example:
+  - description: |-
+      Loads the botmode module
+    text: |-
+      /LOADMODULE botmode
