--- a/docs/3/commands/_part.yml
+++ b/docs/3/commands/_part.yml
@@ -3,27 +3,20 @@ syntax: >-
   <channel>[,<channel>]+ [<reason>]
 description: |-
   Leaves one or more channels. If `<reason>` is specified then it will be used as the message shown when parting.
-example: |-
-  Leaves \#channel with no reason:
-
-  ```plaintext
-  /PART #channel
-  ```
-
-  Leaves \#channel-one and \#channel-two with no reason:
-
-  ```plaintext
-  /PART #channel-one,#channel-two
-  ```
-
-  Leaves \#channel with the reason "Going to bed":
-
-  ```plaintext
-  /PART #channel :Going to bed
-  ```
-
-  Leaves \#channel-one and \#channel-two with the reason "Going to bed":
-
-  ```plaintext
-  /PART #channel-one,#channel-two :Going to bed
-  ```
+example:
+  - description: |-
+      Leaves \#channel with no reason
+    text: |-
+      /PART #channel
+  - description: |-
+      Leaves \#channel-one and \#channel-two with no reason
+    text: |-
+      /PART #channel-one,#channel-two
+  - description: |-
+      Leaves \#channel with the reason "Going to bed"
+    text: |-
+      /PART #channel :Going to bed
+  - description: |-
+      Leaves \#channel-one and \#channel-two with the reason "Going to bed"
+    text: |-
+      /PART #channel-one,#channel-two :Going to bed
