--- a/docs/3/commands/_ping.yml
+++ b/docs/3/commands/_ping.yml
@@ -3,15 +3,12 @@ syntax: >-
   <cookie> [<server>]
 description: |-
   Pings `<server>` with the specified `<cookie>`.  If `<server>` is not specified then it defaults to the local server.
-example: |-
-  Pings the local server with the cookie "wibble".
-
-  ```plaintext
-  /PING wibble
-  ```
-
-  Pings `irc2.example.com` with the cookie "wobble".
-
-  ```plaintext
-  /PING wobble irc2.example.com
-  ```
+example:
+  - description: |-
+      Pings the local server with the cookie "wibble"
+    text: |-
+      /PING wibble
+  - description: |-
+      Pings `irc2.example.com` with the cookie "wobble"
+    text: |-
+      /PING wobble irc2.example.com
