--- a/docs/3/commands/_pong.yml
+++ b/docs/3/commands/_pong.yml
@@ -3,15 +3,12 @@ syntax: >-
   <cookie> [<server>]
 description: |-
   Responds to a ping from `<server>` with the specified `<cookie>`.  If `<server>` is not specified then it defaults to the local server.
-example: |-
-  Responds to a ping from the local server with the cookie "wibble".
-
-  ```plaintext
-  /PONG wibble
-  ```
-
-  Responds to a ping from `irc2.example.com` with the cookie "wobble".
-
-  ```plaintext
-  /PONG wobble irc2.example.com
-  ```
+example:
+  - description: |-
+      Responds to a ping from the local server with the cookie "wibble"
+    text: |-
+      /PONG wibble
+  - description: |-
+      Responds to a ping from `irc2.example.com` with the cookie "wobble"
+    text: |-
+      /PONG wobble irc2.example.com
