--- a/docs/3/commands/_quit.yml
+++ b/docs/3/commands/_quit.yml
@@ -3,15 +3,12 @@ syntax: >-
   [<message>]
 description: |-
   Disconnects from the local server. If `<message>` is specified then it will be used as the message shown when quitting. Otherwise, "Client exited" will be used.
-example: |-
-  Quits with "Client exited" as the quit message:
-
-  ```plaintext
-  /QUIT
-  ```
-
-  Quits with "Time for bed" as the reason:
-
-  ```plaintext
-  /QUIT :Time for bed
-  ```
+example:
+  - description: |-
+      Quits with "Client exited" as the quit message
+    text: |-
+      /QUIT
+  - description: |-
+      Quits with "Time for bed" as the reason
+    text: |-
+      /QUIT :Time for bed
