--- a/docs/3/commands/_reloadmodule.yml
+++ b/docs/3/commands/_reloadmodule.yml
@@ -5,9 +5,8 @@ description: |-
   Reloads the specified module on the local server.
 
   This command is only usable by server operators with RELOADMODULE in one of their `<class>` blocks.
-example: |-
-  Reloads the alias module:
-
-  ```plaintext
-  /RELOADMODULE alias
-  ```
+example:
+  - description: |-
+      Reloads the alias module
+    text: |-
+      /RELOADMODULE alias
