--- a/docs/3/commands/_restart.yml
+++ b/docs/3/commands/_restart.yml
@@ -5,9 +5,8 @@ description: |-
   Restarts the local server. The `<server>` parameter MUST match the name of the local server.
 
   This command is only usable by server operators with RESTART in one of their `<class>` blocks.
-example: |-
-  Restarts the local server:
-
-  ```plaintext
-  /RESTART irc2.example.com
-  ```
+example:
+  - description: |-
+      Restarts the local server
+    text: |-
+      /RESTART irc2.example.com
