--- a/docs/3/commands/_servlist.yml
+++ b/docs/3/commands/_servlist.yml
@@ -3,9 +3,8 @@ syntax: >-
   [<nick> [<oper-type>]]
 description: |-
   List network services that are currently connected to the network and visible to you. The optional glob-based nick and oper-type parameters match against the nickname of the network service and the oper type of the network service.
-example: |-
-  Lists all visible network services with a nickname ending in "Serv":
-
-  ```plaintext
-  /SERVLIST *Serv
-  ```
+example:
+  - description: |-
+      Lists all visible network services with a nickname ending in "Serv"
+    text: |-
+      /SERVLIST *Serv
