--- a/docs/3/commands/_time.yml
+++ b/docs/3/commands/_time.yml
@@ -5,15 +5,12 @@ description: |-
   If `<server>` is specified then requests the time on the specified server.
 
   Otherwise, requests the time on the local server.
-example: |-
-  Requests the time on the local server:
-
-  ```plaintext
-  /TIME
-  ```
-
-  Requests the time on remote server irc.eu.example.com:
-
-  ```plaintext
-  /STATS p irc.eu.example.com
-  ```
+example:
+  - description: |-
+      Requests the time on the local server
+    text: |-
+      /TIME
+  - description: |-
+      Requests the time on remote server irc.eu.example.com
+    text: |-
+      /STATS p irc.eu.example.com
