--- a/docs/3/commands/_topic.yml
+++ b/docs/3/commands/_topic.yml
@@ -5,15 +5,12 @@ description: |-
   If `<newtopic>` is specified then changes the topic for `<channel>` to the specified value.
 
   Otherwise, requests the topic for the specified channel.
-example: |-
-  Changes the topic for #trains to "choo choo"
-
-  ```plaintext
-  /TOPIC #trains :choo choo
-  ```
-
-  Requests the topic for #trains:
-
-  ```plaintext
-  /TOPIC #trains
-  ```
+example:
+  - description: |-
+      Changes the topic for #trains to "choo choo"
+    text: |-
+      /TOPIC #trains :choo choo
+  - description: |-
+      Requests the topic for #trains
+    text: |-
+      /TOPIC #trains
