--- a/docs/3/commands/_userhost.yml
+++ b/docs/3/commands/_userhost.yml
@@ -3,15 +3,12 @@ syntax: >-
   <nick> [<nick>]+
 description: |-
   Requests the hostname of the specified users.
-example: |-
-  Requests the hostname of Adam:
-
-  ```plaintext
-  /USERHOST Adam
-  ```
-
-  Requests the hostname of Adam and Sadie:
-
-  ```plaintext
-  /USERHOST Adam Sadie
-  ```
+example:
+  - description: |-
+      Requests the hostname of Adam
+    text: |-
+      /USERHOST Adam
+  - description: |-
+      Requests the hostname of Adam and Sadie
+    text: |-
+      /USERHOST Adam Sadie
