--- a/docs/3/commands/_version.yml
+++ b/docs/3/commands/_version.yml
@@ -5,15 +5,12 @@ description: |-
   If `<server>` is specified then requests the version of the specified server.
 
   Otherwise, requests the version of the local server.
-example: |-
-  Requests the version of the local server:
-
-  ```plaintext
-  /VERSION
-  ```
-
-  Requests the version of the remote server irc.eu.example.com:
-
-  ```plaintext
-  /VERSION irc.eu.example.com
-  ```
+example:
+  - description: |-
+      Requests the version of the local server
+    text: |-
+      /VERSION
+  - description: |-
+      Requests the version of the remote server irc.eu.example.com
+    text: |-
+      /VERSION irc.eu.example.com
