--- a/docs/3/commands/_whowas.yml
+++ b/docs/3/commands/_whowas.yml
@@ -3,9 +3,8 @@ syntax: >-
   <nick>
 description: |-
   Requests information about a user who was previously connected with the specified nick.
-example: |-
-  Requests information about who previously used the nick Adam:
-
-  ```plaintext
-  /WHOWAS Adam
-  ```
+example:
+  - description: |-
+      Requests information about who previously used the nick Adam
+    text: |-
+      /WHOWAS Adam
